# taxxevasion

./: CMakeLists.txt  CMakeUserPresets.json  README.md
src/: attacks.cpp  attacks.h  bitboard.h  board.cpp  board.h  defs.h  evaluate.h  main.cpp  misc.cpp  misc.h  movegen.cpp  movegen.h  search.cpp  search.h  time_man.cpp  time_man.h
src/modes/: most_captures.hpp  random.hpp
src/utils/: static_vector.h
